English level standard update

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 </tr>
                 <tr>
                     <th class="text-center" scope="row">¿Cuál es tu nivel de inglés?</th>
-                    <td class="text-center score-button" value="4">B2, C1, C2</td>
-                    <td class="text-center score-button" value="3">B1</td>
-                    <td class="text-center score-button" value="2">A2</td>
-                    <td class="text-center score-button" value="1">A1</td>
+                    <td class="text-center score-button" value="4">C1, C2 (Avanzado)</td>
+                    <td class="text-center score-button" value="3">B1, B2 (Intermedio)</td>
+                    <td class="text-center score-button" value="2">A1, A2 (Basico)</td>
+                    <td class="text-center score-button" value="1">Nulo (Sin conocimientos)</td>
                 </tr>
                 <tr>
                     <th class="text-center" scope="row">¿Cuentas ya con conocimientos técnicos en algún lenguaje?</th>
