se elimina código innecesario (comentarios, etc.)

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     </div>
 
     <div>
-        <p>Total de Puntaje: <span id="total-score"></span></p>
-        <p>Recomendación: <span id="recomendacion"></span></p>
+        <p class="text-center fs-3 m-3 fw-bold">Total de Puntaje: <span id="total-score"></span></p>
+        <p class="text-center fs-3 m-3 fw-bold">Recomendación: <span id="recomendacion"></span></p>
     </div>
 
     
