Question Where do you live? is added as a standard

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                     <td class="text-center score-button" value="1">Su tratamiento médico o de rehabilitación se complica frecuentemente</td>
                 </tr>
                 <tr>
-                    <th class="text-center" scope="row">¿Estás llevando algún tipo de seguimiento médico o de rehabilitación?</th>
-                    <td class="text-center score-button" value="4">Mark</td>
-                    <td class="text-center score-button" value="3">Otto</td>
-                    <td class="text-center score-button" value="2">@mdo</td>
-                    <td class="text-center score-button" value="1">@mdo</td>
+                    <th class="text-center" scope="row">En que ciudad/estado resides actualmente?</th>
+                    <td class="text-center score-button" value="4">CDMX/EDOMEX</td>
+                    <td class="text-center score-button" value="3">Merida, Monterrey, Culiacan, Guadalajara.</td>
+                    <td class="text-center score-button" value="2">Queretaro, Puebla, Cuernavaca, Pachuca</td>
+                    <td class="text-center score-button" value="1">Otra, pero estoy dispuestx a mudarme para conseguir empleo.</td>
                 </tr>
             </tbody>
         </table>
