Question: Where do you live? is added as a standard

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <td class="text-center score-button" value="4">CDMX/EDOMEX</td>
                     <td class="text-center score-button" value="3">Merida, Monterrey, Culiacan, Guadalajara.</td>
                     <td class="text-center score-button" value="2">Queretaro, Puebla, Cuernavaca, Pachuca</td>
-                    <td class="text-center score-button" value="1">Otra, pero estoy dispuestx a mudarme para conseguir empleo.</td>
+                    <td class="text-center score-button" value="1">Otra, pero estoy dispuestx a mudarme para conseguir empleo</td>
                 </tr>
             </tbody>
         </table>
