index.html hotfix

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
+        <script async defer src="./js/rubrica.js"></script>
+    </head>
 
 <body>
     <p class="text-center fs-3 m-3 fw-bold">Rúbrica para HireVue</p>
